progress bar now show right percent of macro

--- a/HealtyApp/ViewController/Base.lproj/Main.storyboard
+++ b/HealtyApp/ViewController/Base.lproj/Main.storyboard
@@ -796,6 +796,6 @@
         <image name="info.circle" catalog="system" width="64" height="60"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="f8w-yu-g58"/>
+        <segue reference="Vzv-EB-a2v"/>
     </inferredMetricsTieBreakers>
 </document>
