--- a/HealtyApp/Base.lproj/Main.storyboard
+++ b/HealtyApp/Base.lproj/Main.storyboard
@@ -15,7 +15,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oY9-fF-4Es">
+                            <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oY9-fF-4Es">
                                 <rect key="frame" x="20" y="221" width="374" height="218"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Calorie" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="APz-Hq-Dhm">
@@ -92,20 +92,20 @@
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Macronutrienti" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kPI-Io-wBF">
-                                <rect key="frame" x="0.0" y="183" width="414" height="27"/>
+                                <rect key="frame" x="0.0" y="140" width="414" height="70"/>
                                 <color key="backgroundColor" red="0.092625625431537628" green="0.43287992477416992" blue="0.087493307888507843" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="36"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cZk-u6-jH3">
-                                <rect key="frame" x="167" y="420.5" width="80" height="78"/>
+                                <rect key="frame" x="167" y="420.5" width="80" height="79"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="80" id="LyT-l3-bkt"/>
                                     <constraint firstAttribute="height" constant="80" id="tYV-kp-W4k"/>
                                 </constraints>
                                 <color key="tintColor" red="0.089910395443439484" green="0.45158571004867554" blue="0.15691718459129333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <state key="normal" backgroundImage="circle.grid.hex.fill" catalog="system">
+                                <state key="normal" backgroundImage="plus.circle.fill" catalog="system">
                                     <color key="titleColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <color key="titleShadowColor" systemColor="tertiarySystemBackgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
@@ -113,17 +113,25 @@
                                     <action selector="addFood:" destination="BYZ-38-t0r" eventType="touchUpInside" id="fTv-6t-ZOk"/>
                                 </connections>
                             </button>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="6qU-Rr-Mnw">
+                                <rect key="frame" x="20" y="585" width="374" height="277"/>
+                            </mapView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="kPI-Io-wBF" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="5iT-tV-34w"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="ouA-0e-jVO" secondAttribute="bottom" constant="548" id="8Ts-Sv-SbV"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="6qU-Rr-Mnw" secondAttribute="trailing" constant="20" id="C0d-Sv-7Fb"/>
+                            <constraint firstItem="6qU-Rr-Mnw" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="DIA-GE-j3c"/>
                             <constraint firstItem="kPI-Io-wBF" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="F0X-Ao-g4u"/>
+                            <constraint firstItem="6qU-Rr-Mnw" firstAttribute="top" secondItem="cZk-u6-jH3" secondAttribute="bottom" constant="85" id="GnM-6x-2lw"/>
                             <constraint firstItem="oY9-fF-4Es" firstAttribute="top" secondItem="kPI-Io-wBF" secondAttribute="bottom" constant="11" id="SDZ-Hl-pI7"/>
                             <constraint firstItem="oY9-fF-4Es" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="81" id="VDT-xI-bJ6"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="oY9-fF-4Es" secondAttribute="trailing" constant="20" id="aZv-Wt-xNS"/>
+                            <constraint firstItem="kPI-Io-wBF" firstAttribute="height" secondItem="oY9-fF-4Es" secondAttribute="height" multiplier="0.321101" id="bN9-Sb-dw5"/>
                             <constraint firstItem="cZk-u6-jH3" firstAttribute="top" secondItem="oY9-fF-4Es" secondAttribute="bottom" constant="-19" id="kGo-gQ-cMI"/>
                             <constraint firstItem="cZk-u6-jH3" firstAttribute="centerX" secondItem="oY9-fF-4Es" secondAttribute="centerX" id="kgy-nP-x0f"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="6qU-Rr-Mnw" secondAttribute="bottom" id="oyW-dT-oDV"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -135,6 +143,7 @@
                         <outlet property="View" destination="oY9-fF-4Es" id="VsO-Fw-Hec"/>
                         <outlet property="caloriesOfTheDay" destination="ouA-0e-jVO" id="yIY-Yc-PVG"/>
                         <outlet property="carbo" destination="NNJ-Uj-eo9" id="Rdp-v0-czW"/>
+                        <outlet property="contentView" destination="oY9-fF-4Es" id="y8m-e4-gzf"/>
                         <outlet property="fat" destination="iuV-l9-cOP" id="w9y-d5-H0y"/>
                         <outlet property="groupView" destination="oY9-fF-4Es" id="a8D-7Q-1Kn"/>
                         <outlet property="protein" destination="3eJ-y6-I7h" id="zDJ-tZ-4t7"/>
@@ -276,11 +285,11 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="IdCell" id="gcQ-hN-qVH" customClass="TableViewCellCustomize" customModule="HealtyApp" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="IdCell" id="gcQ-hN-qVH" customClass="TableViewCellCustomize" customModule="HealtyApp" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="55.5" width="414" height="200"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="gcQ-hN-qVH" id="7nG-Gc-3ax">
-                                            <rect key="frame" x="0.0" y="0.0" width="383" height="200"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="200"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Carboidrati" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8QB-DH-Cru">
@@ -348,7 +357,7 @@
                                                     <color key="tintColor" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 </progressView>
                                             </subviews>
-                                            <color key="backgroundColor" red="0.091074042022228241" green="0.71830093860626221" blue="0.087975166738033295" alpha="0.55104880136986301" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <constraints>
                                                 <constraint firstAttribute="bottom" secondItem="PNH-4S-8AA" secondAttribute="bottom" constant="80" id="1Kl-XO-TbD"/>
                                                 <constraint firstItem="EJ8-37-cqt" firstAttribute="leading" secondItem="3J2-K9-pdi" secondAttribute="trailing" constant="88" id="3Ap-wO-8S2"/>
@@ -789,11 +798,11 @@
         </scene>
     </scenes>
     <resources>
-        <image name="circle.grid.hex.fill" catalog="system" width="64" height="56"/>
         <image name="flame.fill" catalog="system" width="54" height="64"/>
         <image name="heart" catalog="system" width="64" height="54"/>
         <image name="heart.fill" catalog="system" width="64" height="54"/>
         <image name="info.circle" catalog="system" width="64" height="60"/>
+        <image name="plus.circle.fill" catalog="system" width="64" height="60"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="Vzv-EB-a2v"/>
